<resources>
    <string name="app_name">MSanalytics</string>
    <string name="fragment_start__first_button">Войти с помощью почты</string>
    <string name="fragment_start__second__button">Войти через соцсети</string>
    <string name="fragment_login__header">Войти с помощью\nпочты</string>
    <string name="email_edit_text">Email:</string>
    <string name="password_edit_text">Password:</string>
    <string name="nickname_edit_text">Nickname:</string>
    <string name="fragment_login__first_button">Начать!</string>
    <string name="fragment_login__second_button">или зарегистрируйтесь</string>
    <string name="fragment_reg__header">Пройдите\nрегистрацию</string>
    <string name="fragment_reg__interesting">Интересное:</string>
    <string name="menu_home">home</string>
    <string name="menu_create">create</string>
    <string name="menu_profile">profile</string>
    <string name="menu_search">search</string>
    <string name="menu_likes">likes</string>
</resources>