<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.entry.login.LoginFragment"
    android:background="@color/background">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/fragment_login__start_edit_text_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.17" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/fragment_login__horizontal_button_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/fragment_login__end_edit_text_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.83"/>

    <TextView
        android:id="@+id/fragment_login__header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="bottom|start"
        android:text="@string/fragment_login__header"
        android:fontFamily="@font/rubik_bold"
        android:textSize="@dimen/_17ssp"
        android:layout_marginBottom="@dimen/_21sdp"
        android:paddingHorizontal="@dimen/_7sdp"
        app:layout_constraintEnd_toStartOf="@id/fragment_login__end_edit_text_guideline"
        app:layout_constraintStart_toEndOf="@id/fragment_login__start_edit_text_guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/fragment_login__email"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0.60"/>

    <EditText
        style="@style/EditText"
        android:id="@+id/fragment_login__email"
        android:layout_width="0dp"
        android:layout_height="@dimen/_42sdp"
        android:hint="@string/email_edit_text"
        android:paddingHorizontal="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_11sdp"
        app:layout_constraintEnd_toStartOf="@id/fragment_login__end_edit_text_guideline"
        app:layout_constraintStart_toEndOf="@id/fragment_login__start_edit_text_guideline"
        app:layout_constraintTop_toBottomOf="@id/fragment_login__header"
        app:layout_constraintBottom_toTopOf="@id/fragment_login__password" />

    <EditText
        style="@style/EditText"
        android:id="@+id/fragment_login__password"
        android:layout_width="0dp"
        android:layout_height="@dimen/_42sdp"
        android:hint="@string/password_edit_text"
        android:inputType="textPassword"
        android:paddingHorizontal="@dimen/_16sdp"
        app:layout_constraintBottom_toTopOf="@+id/fragment_login__horizontal_button_guideline"
        app:layout_constraintEnd_toStartOf="@id/fragment_login__end_edit_text_guideline"
        app:layout_constraintStart_toEndOf="@id/fragment_login__start_edit_text_guideline"
        app:layout_constraintTop_toBottomOf="@id/fragment_login__email" />

    <Button
        android:id="@+id/fragment_login__first_button"
        style="@style/Button"
        android:layout_width="0dp"
        android:layout_height="@dimen/_37sdp"
        android:text="@string/fragment_login__first_button"
        app:layout_constraintEnd_toStartOf="@id/fragment_login__end_edit_text_guideline"
        app:layout_constraintStart_toStartOf="@id/fragment_login__start_edit_text_guideline"
        app:layout_constraintTop_toBottomOf="@id/fragment_login__horizontal_button_guideline"
        app:layout_constraintBottom_toTopOf="@id/fragment_login__second_button"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0"/>

    <Button
        android:id="@+id/fragment_login__second_button"
        style="@style/Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_37sdp"
        android:text="@string/fragment_login__second_button"
        app:layout_constraintEnd_toStartOf="@id/fragment_login__end_edit_text_guideline"
        app:layout_constraintStart_toStartOf="@id/fragment_login__start_edit_text_guideline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_login__first_button"/>
</androidx.constraintlayout.widget.ConstraintLayout>