<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.entry.reg.RegFragment"
    android:background="@color/background">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/fragment_reg__start_edit_text_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.17" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/fragment_reg__end_edit_text_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.83"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/fragment_reg__horizontal_button_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65"/>

    <TextView
        android:id="@+id/fragment_reg__header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="bottom|start"
        android:text="@string/fragment_reg__header"
        android:fontFamily="@font/rubik_bold"
        android:textSize="@dimen/_17ssp"
        android:layout_marginBottom="@dimen/_21sdp"
        android:paddingHorizontal="@dimen/_7sdp"
        app:layout_constraintEnd_toStartOf="@id/fragment_reg__end_edit_text_guideline"
        app:layout_constraintStart_toEndOf="@id/fragment_reg__start_edit_text_guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/fragment_reg__nickname"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0.60"/>

    <EditText
        style="@style/EditText"
        android:id="@+id/fragment_reg__nickname"
        android:layout_width="0dp"
        android:layout_height="@dimen/_42sdp"
        android:hint="@string/nickname_edit_text"
        android:paddingHorizontal="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_11sdp"
        app:layout_constraintEnd_toStartOf="@id/fragment_reg__end_edit_text_guideline"
        app:layout_constraintStart_toEndOf="@id/fragment_reg__start_edit_text_guideline"
        app:layout_constraintTop_toBottomOf="@id/fragment_reg__header"
        app:layout_constraintBottom_toTopOf="@id/fragment_reg__email" />

    <EditText
        style="@style/EditText"
        android:id="@+id/fragment_reg__email"
        android:layout_width="0dp"
        android:layout_height="@dimen/_42sdp"
        android:hint="@string/email_edit_text"
        android:paddingHorizontal="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_11sdp"
        app:layout_constraintEnd_toStartOf="@id/fragment_reg__end_edit_text_guideline"
        app:layout_constraintStart_toEndOf="@id/fragment_reg__start_edit_text_guideline"
        app:layout_constraintTop_toBottomOf="@id/fragment_reg__nickname"
        app:layout_constraintBottom_toTopOf="@id/fragment_reg__password" />

    <EditText
        style="@style/EditText"
        android:id="@+id/fragment_reg__password"
        android:layout_width="0dp"
        android:layout_height="@dimen/_42sdp"
        android:hint="@string/password_edit_text"
        android:inputType="textPassword"
        android:paddingHorizontal="@dimen/_16sdp"
        app:layout_constraintEnd_toStartOf="@id/fragment_reg__end_edit_text_guideline"
        app:layout_constraintStart_toEndOf="@id/fragment_reg__start_edit_text_guideline"
        app:layout_constraintTop_toBottomOf="@id/fragment_reg__email"
        app:layout_constraintBottom_toTopOf="@id/fragment_reg__horizontal_button_guideline"/>

    <Button
        android:id="@+id/fragment_reg__first_button"
        style="@style/Button"
        android:layout_width="0dp"
        android:layout_height="@dimen/_37sdp"
        android:text="@string/fragment_login__first_button"
        app:layout_constraintEnd_toStartOf="@id/fragment_reg__end_edit_text_guideline"
        app:layout_constraintStart_toStartOf="@id/fragment_reg__start_edit_text_guideline"
        app:layout_constraintTop_toBottomOf="@id/fragment_reg__horizontal_button_guideline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"/>

    <TextView
        android:id="@+id/fragment_reg__text_interesting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingVertical="@dimen/_7sdp"
        android:text="@string/fragment_reg__interesting"
        android:textColor="@color/buttonTextLight"
        android:textSize="@dimen/_10sdp"
        app:layout_constraintBottom_toTopOf="@id/fragment_reg__text_evidence"
        app:layout_constraintEnd_toStartOf="@id/fragment_reg__end_edit_text_guideline"
        app:layout_constraintStart_toStartOf="@id/fragment_reg__start_edit_text_guideline"
        app:layout_constraintTop_toBottomOf="@id/fragment_reg__first_button"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0.75"/>

    <TextView
        android:id="@+id/fragment_reg__text_evidence"
        android:textSize="@dimen/_10ssp"
        android:textColor="@color/buttonTextLight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:lines="3"
        android:gravity="center"
        android:paddingHorizontal="@dimen/_7sdp"
        tools:text="Игра minecraft была выпущенав 2009 году и куплена компенией microsoft в 2018 году"
        app:layout_constraintEnd_toStartOf="@id/fragment_reg__end_edit_text_guideline"
        app:layout_constraintStart_toStartOf="@id/fragment_reg__start_edit_text_guideline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_reg__text_interesting"/>

</androidx.constraintlayout.widget.ConstraintLayout>